--- a/src/WRSoftware.MediatRHangfire/WRSoftware.MediatRHangfire.csproj
+++ b/src/WRSoftware.MediatRHangfire/WRSoftware.MediatRHangfire.csproj
@@ -3,10 +3,19 @@
   <PropertyGroup>
 	<TargetFramework>netstandard2.1</TargetFramework>
 	<LangVersion>latest</LangVersion>
+	<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+	<Copyright>Wesley Silva</Copyright>
+	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
   </PropertyGroup>
 	<ItemGroup>
 		<PackageReference Include="Hangfire.Core" Version="1.7.24" />
 		<PackageReference Include="MediatR" Version="9.0.0" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="..\..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 
 </Project>
