--- a/src/WRSoftware.Utils.EntityFramework/WRSoftware.Utils.EntityFramework.csproj
+++ b/src/WRSoftware.Utils.EntityFramework/WRSoftware.Utils.EntityFramework.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <Description>Wrapper for EntityFramework using CQRS</Description>
+    <Copyright>Wesley Silva</Copyright>
   </PropertyGroup>
 
   <ItemGroup>
@@ -17,6 +21,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
