--- a/src/WRSoftware.Utils.Helper/WRSoftware.Utils.Helper.csproj
+++ b/src/WRSoftware.Utils.Helper/WRSoftware.Utils.Helper.csproj
@@ -2,6 +2,11 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
+		<Description>Helper to make it easier to use Datetime, Sting and others</Description>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<Copyright>Wesley Silva</Copyright>
+		<RepositoryType></RepositoryType>
+		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -11,5 +16,11 @@
 	</ItemGroup>
 	<ItemGroup>
 		<ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+	  <None Include="..\..\LICENSE.txt">
+	    <Pack>True</Pack>
+	    <PackagePath></PackagePath>
+	  </None>
 	</ItemGroup>
 </Project>
