--- a/src/WRSoftware.Utils.Logging/WRSoftware.Utils.Logging.csproj
+++ b/src/WRSoftware.Utils.Logging/WRSoftware.Utils.Logging.csproj
@@ -2,6 +2,10 @@
 
   <PropertyGroup>
 	<TargetFramework>netstandard2.1</TargetFramework>
+	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+	<Copyright>Wesley Silva</Copyright>
+	<Description>Logging Wrapper</Description>
+	<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
   </PropertyGroup>
   <ItemGroup>
 	<PackageReference Include="Castle.Core" Version="4.4.1" />
@@ -10,6 +14,12 @@
   </ItemGroup>
   <ItemGroup>
 	  <ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
