--- a/src/WRSoftware.Utils.REST/WRSoftware.Utils.REST.csproj
+++ b/src/WRSoftware.Utils.REST/WRSoftware.Utils.REST.csproj
@@ -2,6 +2,9 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Copyright>Wesley Silva</Copyright>
+    <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+    <RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
   </PropertyGroup>
 
 
@@ -12,5 +15,11 @@
     <ProjectReference Include="..\WRSoftware.Utils.Helper\WRSoftware.Utils.Helper.csproj" />
     <ProjectReference Include="..\WRSoftware.Utils.Logging\WRSoftware.Utils.Logging.csproj" />
     <ProjectReference Include="..\WRSoftware.Utils.WebBase\WRSoftware.Utils.WebBase.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\LICENSE.txt">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 </Project>
