--- a/src/WRSoftware.Utils.MVC/WRSoftware.Utils.MVC.csproj
+++ b/src/WRSoftware.Utils.MVC/WRSoftware.Utils.MVC.csproj
@@ -5,6 +5,10 @@
     <PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
     <Copyright>Wesley Silva</Copyright>
     <RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+    <Authors>Wesley Silva</Authors>
+	  <Company>WRSoftware</Company>
+    <PackageId>WRSoftware.Utils.MVC</PackageId>
+    <Product>WRSoftware.Utils.MVC</Product>
   </PropertyGroup>
 
   <ItemGroup>
