--- a/.github/workflows/realease_core.yml
+++ b/.github/workflows/realease_core.yml
@@ -47,7 +47,7 @@ jobs:
       run: dotnet pack --configuration Release /p:Version=$BUILD_VERSION --no-build --output .
     
     - name: Run tests
-      run: dotnet test /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal 
+      run: dotnet test $SOLUTION /p:Configuration=$env:BUILD_CONFIG --no-restore --no-build --verbosity normal 
     
     #- name: Push NugetOrg
     #  run: dotnet nuget push *.nupkg --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
