--- a/.github/workflows/realease_core.yml
+++ b/.github/workflows/realease_core.yml
@@ -42,12 +42,13 @@ jobs:
         
     - name: Build
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
-      
+    
+    - name: Run tests
+      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG --no-restore --verbosity normal 
+        
     - name: Pack
       run: dotnet pack --configuration Release /p:Version=$BUILD_VERSION --no-build --output .
     
-    - name: Run tests
-      run: dotnet test WRSoftware.sln /p:Configuration=Release --no-restore --verbosity normal 
     
     #- name: Push NugetOrg
     #  run: dotnet nuget push *.nupkg --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
