--- a/.github/workflows/realease_core.yml
+++ b/.github/workflows/realease_core.yml
@@ -44,7 +44,7 @@ jobs:
       run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
     
     - name: Run tests
-      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG --no-restore --verbosity normal 
+      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal 
         
     - name: Pack
       run: dotnet pack --configuration Release /p:Version=$BUILD_VERSION --no-build --output .
