--- a/.github/workflows/realease_core.yml
+++ b/.github/workflows/realease_core.yml
@@ -53,8 +53,8 @@ jobs:
     #- name: Push NugetOrg
     #  run: dotnet nuget push *.nupkg --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
   
-    #- name: Push GitHub Packages
-    #  run: dotnet nuget push *.nupkg --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
+    - name: Push GitHub Packages
+      run: dotnet nuget push *.nupkg --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
 
     #- name: Create Release
     #  id: create_release
