--- a/.github/workflows/main_push.yml
+++ b/.github/workflows/main_push.yml
@@ -1,4 +1,4 @@
-name: Gerando release no github com .NET Core
+name: Building on main push .NET Core
 
 on:
   push:
@@ -24,10 +24,6 @@ jobs:
       run: |
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
         git branch --remote --contains | grep origin/main
-        
-    - name: Set VERSION variable from tag
-      run: echo "BUILD_VERSION=1.1.0" >> $GITHUB_ENV
-      #run: echo "BUILD_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
@@ -41,20 +37,20 @@ jobs:
         dotnet-version: 3.1.x
         
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
     
     - name: Run tests
       run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal 
         
     - name: Pack
-      run: dotnet pack --configuration Release /p:Version=$BUILD_VERSION --no-build --output .
+      run: dotnet pack --configuration Release --no-build --output .
     
     
     #- name: Push NugetOrg
     #  run: dotnet nuget push *.nupkg --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
   
-    - name: Push GitHub Packages
-      run: dotnet nuget push *.nupkg --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
+    #- name: Push GitHub Packages
+    #  run: dotnet nuget push *.nupkg --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
 
     #- name: Create Release
     #  id: create_release
