--- a/.github/workflows/release_core.yml
+++ b/.github/workflows/release_core.yml
@@ -24,8 +24,8 @@ jobs:
         git branch --remote --contains | grep origin/main
         
     - name: Set VERSION variable from tag
-      run: echo "BUILD_VERSION=1.1.0" >> $GITHUB_ENV
-      #run: echo "BUILD_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
+      #run: echo "BUILD_VERSION=1.1.0" >> $GITHUB_ENV
+      run: echo "BUILD_VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $GITHUB_ENV
       
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
