--- a/.github/workflows/release_core.yml
+++ b/.github/workflows/release_core.yml
@@ -54,3 +54,15 @@ jobs:
     - name: Push GitHub Packages
       run: dotnet nuget push "*.nupkg" --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
 
+    - name: Create Release
+      id: create_release
+      uses: actions/create-release@latest
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        tag_name: ${{ github.ref }}
+        release_name: Release ${{ github.ref }}
+        body: |
+          ${{ steps.Changelog.outputs.changelog }}
+        draft: false
+        prerelease: false
