--- a/.github/workflows/main_push.yml
+++ b/.github/workflows/main_push.yml
@@ -40,13 +40,13 @@ jobs:
         dotnet-version: 3.1.x
         
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
     
     - name: Run tests
-      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal 
+      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore --no-build --verbosity normal 
         
     - name: Pack
-      run: dotnet pack --configuration Release --no-build --output .
+      run: dotnet pack --configuration Release --no-build -p:Version=$BUILD_VERSION --output .
         
     - name: Push NugetOrg
       run: dotnet nuget push "*.nupkg" --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
