--- a/.github/workflows/main_push.yml
+++ b/.github/workflows/main_push.yml
@@ -25,8 +25,8 @@ jobs:
         git fetch --no-tags --prune --depth=1 origin +refs/heads/*:refs/remotes/origin/*
         git branch --remote --contains | grep origin/main
     
-    - name: Set VERSION variable from tag
-      run: echo "BUILD_VERSION=1.0.2" >> $GITHUB_ENV  
+    #- name: Set VERSION variable from tag
+    #  run: echo "BUILD_VERSION=1.0.2" >> $GITHUB_ENV  
     
     - name: Setup NuGet
       uses: NuGet/setup-nuget@v1.0.5
@@ -40,19 +40,19 @@ jobs:
         dotnet-version: 3.1.x
         
     - name: Build
-      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore
+      run: dotnet build $SOLUTION --configuration $BUILD_CONFIG --no-restore
     
     - name: Run tests
-      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG -p:Version=$BUILD_VERSION --no-restore --no-build --verbosity normal 
+      run: dotnet test $SOLUTION /p:Configuration=$BUILD_CONFIG --no-restore --no-build --verbosity normal 
         
     - name: Pack
-      run: dotnet pack --configuration Release --no-build -p:Version=$BUILD_VERSION --output .
+      run: dotnet pack --configuration Release --no-build --output .
         
-    - name: Push NugetOrg
-      run: dotnet nuget push "*.nupkg" --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
+    #- name: Push NugetOrg
+    #  run: dotnet nuget push "*.nupkg" --source 'https://api.nuget.org/v3/index.json' --api-key ${{secrets.NUGET_API_KEY}} --skip-duplicate
   
-    - name: Push GitHub Packages
-      run: dotnet nuget push "*.nupkg" --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
+    #- name: Push GitHub Packages
+      #run: dotnet nuget push "*.nupkg" --source https://nuget.pkg.github.com/acraven/index.json --api-key ${GITHUB_TOKEN} --skip-duplicate
 
     #- name: Create Release
     #  id: create_release
