--- a/src/WRSoftware.Utils.Common/WRSoftware.Utils.Common.csproj
+++ b/src/WRSoftware.Utils.Common/WRSoftware.Utils.Common.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
@@ -7,7 +7,6 @@
 		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
 		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
 		<NeutralLanguage>en-001</NeutralLanguage>
-		<PackageReleaseNotes>First version</PackageReleaseNotes>
 		<Authors>Wesley Silva</Authors>
 		<Company>WRSoftware</Company>
 		<PackageId>WRSoftware.Utils.Common</PackageId>
