--- a/src/WRSoftware.Utils.Notifications/WRSoftware.Utils.Notifications.csproj
+++ b/src/WRSoftware.Utils.Notifications/WRSoftware.Utils.Notifications.csproj
@@ -1,16 +1,27 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.1</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+		<Authors>Wesley Silva</Authors>
+		<Company>WRSoftware</Company>
+		<PackageId>WRSoftware.Utils.REST</PackageId>
+		<Product>WRSoftware.Utils.REST</Product>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
-  </ItemGroup>
-
+	<ItemGroup>
+		<ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\LICENSE.txt">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 </Project>
