Adding offset and DateTimeProvider

--- a/src/WRSoftware.Utils.Common/WRSoftware.Utils.Common.csproj
+++ b/src/WRSoftware.Utils.Common/WRSoftware.Utils.Common.csproj
@@ -11,6 +11,7 @@
 		<Company>WRSoftware</Company>
 		<PackageId>WRSoftware.Utils.Common</PackageId>
 		<Product>WRSoftware.Utils.Common</Product>
+		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 	</PropertyGroup>
 
 	<ItemGroup>
