--- a/src/WRSoftware.Utils.REST/WRSoftware.Utils.REST.csproj
+++ b/src/WRSoftware.Utils.REST/WRSoftware.Utils.REST.csproj
@@ -9,6 +9,7 @@
 		<Company>WRSoftware</Company>
 		<PackageId>WRSoftware.Utils.REST</PackageId>
 		<Product>WRSoftware.Utils.REST</Product>
+		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 	</PropertyGroup>
 
 	<ItemGroup>
