--- a/src/WRSoftware.Utils.EntityFramework/WRSoftware.Utils.EntityFramework.csproj
+++ b/src/WRSoftware.Utils.EntityFramework/WRSoftware.Utils.EntityFramework.csproj
@@ -1,39 +1,40 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	<TargetFramework>netstandard2.1</TargetFramework>
-	<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
-	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-	<Description>Wrapper for EntityFramework using CQRS</Description>
-	<Copyright>Wesley Silva</Copyright>
-	<Authors>Wesley Silva</Authors>
-	  <Company>WRSoftware</Company>
-	<PackageId>WRSoftware.Utils.EntityFramework</PackageId>
-	<Product>WRSoftware.Utils.EntityFramework</Product>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<Description>Wrapper for EntityFramework using CQRS</Description>
+		<Copyright>Wesley Silva</Copyright>
+		<Authors>Wesley Silva</Authors>
+		<Company>WRSoftware</Company>
+		<PackageId>WRSoftware.Utils.EntityFramework</PackageId>
+		<Product>WRSoftware.Utils.EntityFramework</Product>
+		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
+	</PropertyGroup>
 
-  <ItemGroup>
-	<Compile Remove="Interfaces\IBaseService.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Remove="Interfaces\IBaseService.cs" />
+	</ItemGroup>
 
-  <ItemGroup>
-	<PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="3.0.20" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
-	<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
-	<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="LinqKit.Microsoft.EntityFrameworkCore" Version="3.0.20" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.9" />
+		<PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.1.9" />
+		<PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+	</ItemGroup>
 
 
-  <ItemGroup>
-	<ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
+	</ItemGroup>
 
-  <ItemGroup>
-	<None Include="..\..\LICENSE.txt">
-	  <Pack>True</Pack>
-	  <PackagePath></PackagePath>
-	</None>
-  </ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\LICENSE.txt">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 </Project>
