--- a/src/WRSoftware.Utils.Helper/WRSoftware.Utils.Helper.csproj
+++ b/src/WRSoftware.Utils.Helper/WRSoftware.Utils.Helper.csproj
@@ -14,6 +14,7 @@
 		<AssemblyVersion>1.0.1.0</AssemblyVersion>
 		<FileVersion>1.0.1.0</FileVersion>
 		<Version>1.0.1</Version>
+		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
 	</PropertyGroup>
 
 	<ItemGroup>
