--- a/src/WRSoftware.Utils.Logging/WRSoftware.Utils.Logging.csproj
+++ b/src/WRSoftware.Utils.Logging/WRSoftware.Utils.Logging.csproj
@@ -1,29 +1,30 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-	<TargetFramework>netstandard2.1</TargetFramework>
-	<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
-	<Copyright>Wesley Silva</Copyright>
-	<Description>Logging Wrapper</Description>
-	<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
-  <Authors>Wesley Silva</Authors>
-	<Company>WRSoftware</Company>
-  <PackageId>WRSoftware.Utils.Logging</PackageId>
-  <Product>WRSoftware.Utils.Logging</Product>
-  </PropertyGroup>
-  <ItemGroup>
-	<PackageReference Include="Castle.Core" Version="4.4.1" />
-	<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
-	<PackageReference Include="NLog" Version="4.7.5" />
-  </ItemGroup>
-  <ItemGroup>
-	  <ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
-  </ItemGroup>
-  <ItemGroup>
-	<None Include="..\..\LICENSE.txt">
-	  <Pack>True</Pack>
-	  <PackagePath></PackagePath>
-	</None>
-  </ItemGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.1</TargetFramework>
+		<PackageLicenseFile>LICENSE.txt</PackageLicenseFile>
+		<Copyright>Wesley Silva</Copyright>
+		<Description>Logging Wrapper</Description>
+		<RepositoryUrl>https://github.com/wreuel/WRSoftware</RepositoryUrl>
+		<SourceRevisionId>build$([System.DateTime]::UtcNow.ToString("yyyyMMddHHmmss"))</SourceRevisionId>
+		<Authors>Wesley Silva</Authors>
+		<Company>WRSoftware</Company>
+		<PackageId>WRSoftware.Utils.Logging</PackageId>
+		<Product>WRSoftware.Utils.Logging</Product>
+	</PropertyGroup>
+	<ItemGroup>
+		<PackageReference Include="Castle.Core" Version="4.4.1" />
+		<PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+		<PackageReference Include="NLog" Version="4.7.5" />
+	</ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\WRSoftware.Utils.Common\WRSoftware.Utils.Common.csproj" />
+	</ItemGroup>
+	<ItemGroup>
+		<None Include="..\..\LICENSE.txt">
+			<Pack>True</Pack>
+			<PackagePath></PackagePath>
+		</None>
+	</ItemGroup>
 
 </Project>
